Collapse [FIX] Minor fix

--- a/scss/core/elements/_collapse.scss
+++ b/scss/core/elements/_collapse.scss
@@ -6,6 +6,7 @@
 			transition-timing-function: luiTheme(element, collapse, transition-easing);
 			&.collapse:not(.in),
 			&.collapsing {
+				height: 0;
 				overflow: hidden;
 			}
 		}
